# checkdigit

./: .all-contributorsrc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  Makefile  PYPIREADME.rst  README.md  README.rst  pyproject.toml  setup.py  tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  test.yml
checkdigit/: __init__.py  _data.py  crc.py  data.py  gs1.py  gtin.py  isbn.py  luhn.py  parity.py  py.typed  upc.py  verhoeff.py
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  reference.rst
scripts/: format.sh  tests.sh
scripts/tests/: dependencies.sh  formatting.sh  pytest.sh  type_checking.sh
tests/: __init__.py  config.py  test_crc.py  test_gs1.py  test_isbn.py  test_luhn.py  test_parity.py  test_upc.py  tests.py
