[tool.poetry]
name = "checkdigit"
version = "0.5.0"
description = "A check digit library for data validation"
authors = ["harens <harensdeveloper@gmail.com>"]
maintainers = ["harens <harensdeveloper@gmail.com>"]
readme = "PYPIREADME.rst"
license = "GPL-3.0-or-later"
include = ["checkdigit/py.typed"]
keywords = ["Check Digits", "Validation", "ISBN", "GS1", "Luhn"]
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  'Typing :: Typed'
]

homepage = "https://checkdigit.rtfd.io"
repository = "https://github.com/harens/checkdigit"
documentation = "https://checkdigit.rtfd.io"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/harens/checkdigit/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
pylint = "2.13.9"
mypy = "^1.1"
black = "^23.3"
isort = "^5.11.5"
pydocstyle = "^6.3.0"
coverage = "^7.2.2"
pre-commit = "^2.21.0"
pyupgrade = "^3.3.1"
Sphinx = "5.3.0"
sphinx-autobuild = "^2021.3.14"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"

[tool.coverage.run]
branch = true
# Coverage.py tries to check error404 since it's imported
include = ["checkdigit/*", "tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
